# GOIT_WEB_hw7

./: alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: f5068d6a9c93_init.py
goit_web_hw7/: models.py  my_select.py  seeds.py
src/: models.py  my_select.py  seeds.py
