[tool.poetry]
name = "goit-web-hw7"
version = "0.1.0"
description = ""
authors = ["C-Hurtmann <constantine2903@gmail.com>"]
readme = "README.md"
packages = [{include = "goit_web_hw7"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.13"
alembic = "^1.10.4"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
